fetching trading data from finnhub, displaying them is still laggy

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,2 +1,2 @@
 @import "tailwindcss";
-/* @config "../tailwindcss.config.js"; /* not used for now */ */
+/* @config "../tailwindcss.config.js"; /* not used for now */
