--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,2 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Rubik+Mono+One&display=swap');
 @config "../tailwind.config.js";
 @import "tailwindcss";
+
+body div {
+    margin: 0;
+    box-sizing: border-box;
+}
