compiled fron end

--- a/view/index.html
+++ b/view/index.html
@@ -1,12 +1,23 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/mockstocks-round.png" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    <script type="module" crossorigin src="/assets/index-CFS6vk_M.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-CANDkoj6.css">
+    <title>MockStocks</title>
+    <script type="module" crossorigin src="/assets/index-C0apn_zy.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-BO4meZgV.css">
   </head>
   <body>
     <div id="root"></div>
