butfix and added view to ignore

--- a/view/index.html
+++ b/view/index.html
@@ -16,8 +16,8 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MockStocks</title>
-    <script type="module" crossorigin src="/assets/index-C0apn_zy.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-BO4meZgV.css">
+    <script type="module" crossorigin src="/assets/index-CMtXZ7OO.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-DjP7gDR6.css">
   </head>
   <body>
     <div id="root"></div>
